Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1993

racer test: ASSERTION( it_disposition(it, 0x00800000) ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.6.0
    • Lustre 2.3.0, Lustre 2.4.0
    • None
    • server/client b2_3-tag-2.2.96 RHEL6 external OFED build
    • 3
    • 8101

      Hit this LBUG when running racer on the OFED build

      Lustre: DEBUG MARKER: -----============= acceptance-small: racer ============----- Wed Sep 19 20:26:36 PDT 2012
      Lustre: DEBUG MARKER: excepting tests:
      LustreError: 152-6: Ignoring deprecated mount option 'acl'.
      Lustre: Increasing default stripe size to min 1048576
      Lustre: Mounted lustre-client
      LNet: 27947:0:(debug.c:324:libcfs_debug_str2mask()) You are trying to use a numerical value for the mask - this will be deprecated in a future release.
      LNet: 27947:0:(debug.c:324:libcfs_debug_str2mask()) Skipped 1 previous similar message
      Lustre: DEBUG MARKER: Using TIMEOUT=20
      LNet: 29272:0:(debug.c:324:libcfs_debug_str2mask()) You are trying to use a numerical value for the mask - this will be deprecated in a future release.
      LNet: 29272:0:(debug.c:324:libcfs_debug_str2mask()) Skipped 1 previous similar message
      Lustre: DEBUG MARKER: == racer test 1: racer on clients: client-5-ib,client-17-ib DURATION=900 == 20:27:22 (1348111642)
      LustreError: 18092:0:(file.c:2328:ll_inode_revalidate_fini()) failure -116 inode 144115406632653105
      LustreError: 8396:0:(file.c:626:ll_file_open()) ASSERTION( it_disposition(it, 0x00800000) ) failed: 
      LustreError: 8396:0:(file.c:626:ll_file_open()) LBUG
      Pid: 8396, comm: ls
      
      Call Trace:
       [<ffffffffa0c19905>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      
      Message from [<ffffffffa0c19f17>] lbug_with_loc+0x47/0xb0 [libcfs]
       syslogd@client- [<ffffffffa0af04e0>] ll_lov_recreate.clone.0+0x0/0xdd0 [lustre]
      5 at Sep 19 20:3 [<ffffffffa0c25048>] ? libcfs_log_return+0x28/0x40 [libcfs]
      0:46 ...
       kern [<ffffffffa0ad75d0>] ? ll_dir_open+0x0/0xf0 [lustre]
      el:LustreError:  [<ffffffffa0ad7681>] ll_dir_open+0xb1/0xf0 [lustre]
      8396:0:(file.c:6 [<ffffffff811789ba>] __dentry_open+0x10a/0x360
      26:ll_file_open( [<ffffffff8121439f>] ? security_inode_permission+0x1f/0x30
      )) ASSERTION( it [<ffffffff81178d24>] nameidata_to_filp+0x54/0x70
      _disposition(it, [<ffffffff8118c230>] do_filp_open+0x6c0/0xd60
       0x00800000) ) f [<ffffffff8119a460>] ? mntput_no_expire+0x30/0x110
      ailed: 
      
      Me [<ffffffff811982b2>] ? alloc_fd+0x92/0x160
      ssage from syslo [<ffffffff81178769>] do_sys_open+0x69/0x140
      gd@client-5 at S [<ffffffff81178880>] sys_open+0x20/0x30
      ep 19 20:30:46 . [<ffffffff8100b0f2>] system_call_fastpath+0x16/0x1b
      ..
       kernel:Lus
      treError: 8396:0:(file.c:626:ll_file_open()) LBUG
      Kernel panic - not syncing: LBUG
      Pid: 8396, comm: ls Not tainted 2.6.32-279.5.1.el6.x86_64 #1
      Call Trace:
       [<ffffffff814fd24a>] ? panic+0xa0/0x168
       [<ffffffffa0c19f6b>] ? lbug_with_loc+0x9b/0xb0 [libcfs]
       [<ffffffffa0af04e0>] ? ll_lov_recreate.clone.0+0x0/0xdd0 [lustre]
       [<ffffffffa0c25048>] ? libcfs_log_return+0x28/0x40 [libcfs]
       [<ffffffffa0ad75d0>] ? ll_dir_open+0x0/0xf0 [lustre]
       [<ffffffffa0ad7681>] ? ll_dir_open+0xb1/0xf0 [lustre]
       [<ffffffff811789ba>] ? __dentry_open+0x10a/0x360
       [<ffffffff8121439f>] ? security_inode_permission+0x1f/0x30
       [<ffffffff81178d24>] ? nameidata_to_filp+0x54/0x70
       [<ffffffff8118c230>] ? do_filp_open+0x6c0/0xd60
       [<ffffffff8119a460>] ? mntput_no_expire+0x30/0x110
       [<ffffffff811982b2>] ? alloc_fd+0x92/0x160
       [<ffffffff81178769>] ? do_sys_open+0x69/0x140
       [<ffffffff81178880>] ? sys_open+0x20/0x30
       [<ffffffff8100b0f2>] ? system_call_fastpath+0x16/0x1b
      Initializing cgroup subsys cpuset
      Initializing cgroup subsys cpu
      

            bogl Bob Glossman (Inactive)
            sarah Sarah Liu
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: